--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <title>IlmHub</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="conainer">
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="./img/Logo-3.svg" alt="logo">
+                    <h1>IlmHub</h1>
+                </div>
+                <ul>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Services</li>
+                </ul>
+                <div class="language">
+                    <span>UZ</span>
+                    <span>ENG</span>
+                </div>
+                <button class="btn sign-in">Sign in</button>
+                <button class="btn sign-up">Sign up</button>
+            </nav>
+        </div>
+    </header>
 </body>
 <script src="./js/app.js"></script>
 </html>
