navbar tugay dedi

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
     <header class="header">
-        <div class="conainer">
+        <div class="container">
             <nav class="navbar">
                 <div class="logo">
                     <img src="./img/Logo-3.svg" alt="logo">
                     <h1>IlmHub</h1>
                 </div>
                 <ul>
-                    <li>About</li>
-                    <li>Contact Us</li>
-                    <li>Services</li>
+                    <li><a href="#!">About</a></li>
+                    <li><a href="#!">Contact Us</a></li>
+                    <li><a href="#!">Services</a></li>
                 </ul>
                 <div class="language">
-                    <span>UZ</span>
-                    <span>ENG</span>
+                    <span ><a href="./index.html" class="lan-uz">UZ</a></span>
+                    <span ><a href="#!" class="lan-en">ENG</a></span>
                 </div>
-                <button class="btn sign-in">Sign in</button>
-                <button class="btn sign-up">Sign up</button>
+                <div class="buttons">
+                    <button class="btn sign-in">Sign in</button>
+                    <button class="btn sign-up">Sign up</button>
+                </div>
             </nav>
         </div>
     </header>
