--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <div class="logo">
-                    <img src="./img/Logo-3.svg" alt="logo">
-                    <h1>IlmHub</h1>
-                </div>
-                <ul>
-                    <li><a href="#!">About</a></li>
-                    <li><a href="#!">Contact Us</a></li>
-                    <li><a href="#!">Services</a></li>
-                </ul>
-                <div class="language">
-                    <span ><a href="./index.html" class="lan-uz">UZ</a></span>
-                    <span ><a href="#!" class="lan-en">ENG</a></span>
-                </div>
-                <div class="buttons">
-                    <button class="btn sign-in">Sign in</button>
-                    <button class="btn sign-up">Sign up</button>
-                </div>
-            </nav>
+        <div class="navbar-full">
+            <div class="container">
+                <nav class="navbar">
+                    <a href="./index.html">
+                        <div class="logo">
+                            <img src="./img/Logo-3.svg" alt="logo" id="logo">
+                            <h1>IlmHub</h1>
+                        </div>
+                    </a>
+                    <ul>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">About</a></li>
+                        <li><a href="#!">Contact Us</a></li>
+                        <li><a href="#!">Services</a></li>
+                    </ul>
+                    <div class="nav-right">
+                        <div class="language">
+                            <span ><a href="./index.html" class="lan-uz">UZ</a></span>
+                            <span ><a href="#!" class="lan-en">ENG</a></span>
+                        </div>
+                        <div class="buttons">
+                            <button class="btn sign-in">Sign in</button>
+                            <button class="btn sign-up">Sign up</button>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </header>
 </body>
