--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3c0bf4c975.js" crossorigin="anonymous"></script>
     <title>IlmHub</title>
 </head>
 <body>
@@ -35,11 +36,10 @@
         </div>
         <section class="content">
             <div class="content_information">
-                <h1>Ilmlilar kashf etiladigan, </h1>
-                <h1> markaz Ilmhub!</h1>
-                <p>Yuksak qadriyatli, ilmli tek</p>
-                <p>injinerlar tarbiyalash oliy</p>
-                <p>maqsadimiz!</p>
+                <h1>Ilmlilar kashf etiladigan, markaz Ilmhub! </h1>
+                <p>Yuksak qadriyatli, ilmli tek injinerlar tarbiyalash oliy maqsadimiz!</p>
+                <input type="email" id="input" placeholder="Enter email to sign up">
+                <button class="btn_get">Get started <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="content_img">
                 <img src="./img/Frame (4).png" alt="">
