--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/Logo-3.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>IlmHub</title>
 </head>
 <body>
@@ -53,6 +54,20 @@
             </div>
         </section>
     </header>
+    <main class="main">
+        <section class="blok">
+            <div class="container">
+                <div class="blok-box">
+                    <div class="blok-blog-1">
+                        <img src="./img/rasm.png" alt="Error">
+                    </div>
+                    <div class="blok-blog-2">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 <script src="./js/app.js"></script>
 </html>
