--- a/index.html
+++ b/index.html
@@ -68,6 +68,68 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER PART OF -->
+    <footer class="footer_container">
+        <section class="footer_part">
+            <div class="text">
+                <a href="./index.html">
+                    <div class="footer_logo">
+                        <img src="./img/Logo-3.svg" alt="img" class="logo_part">
+                        <h1 class="Ilmhub">IlmHub</h1>
+                    </div>
+                </a>
+                <div class="footer_p">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, debitis.</p>
+                </div>
+            </div>
+            <div class="footer_part_of">
+                <div class="information">
+                    <h3>Company</h3>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="information">
+                    <h3>Futher information</h3>
+                    <ul>
+                        <li><a href="#">Terms &Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="information">
+                    <h3>Follow us</h3>
+                    <div class="button_my">
+                    <input type="email"  placeholder="Email Address" id="footer_part_input">
+                        <button class="btn_icon">
+                            <i class="fas fa-angle-double-right"></i>
+                        </button>
+                    </div>
+                    <div class="network_link">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+                            <p class="network">Instagram</p>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><i class="fab fa-telegram"></i></a></li>
+                            <p class="network">telegram</p>
+                        </ul>
+                        <ul>
+                            <li><a href="#"> <i class="fab fa-facebook"></i></a></li>
+                            <p class="network">Facebook</p>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><i class="fab fa-twitter-square"></i>  </a></li>
+                            <p class="network">Twitter</p>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+    </footer>
 </body>
 <script src="./js/app.js"></script>
 </html>
