--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                             <h1>IlmHub</h1>
                         </div>
                     </a>
+                    <div class="nav-menu">
                     <ul>
                         <li><a href="#!">Bosh Sahifa</a></li>
                         <li><a href="#!">Biz haqimizda</a></li>
                         <li><a href="#!">Bog'lanish</a></li>
                         <li><a href="#!">Xizmatlar</a></li>
                     </ul>
+                    </div>
                     <div class="nav-right">
                         <div class="language">
                             <span ><a href="./index.html" class="lan-uz">UZ</a></span>
@@ -42,6 +44,12 @@
                         <div class="buttons">
                             <button class="btn sign-in">Kirish</button>
                             <button class="btn sign-up">Ro'yxatdan o'tish</button>
+                        </div>
+                        <div class="navbar_icon">
+                            <input type="checkbox" id="check">
+                            <label onclick="myFunction()" for="check" class="checkbtn">
+                                <i class="fas fa-bars"></i>
+                            </label>
                         </div>
                     </div>
                 </nav>
@@ -497,4 +505,5 @@
   });
 </script>
 <script src="./js/app.js"></script>
+<script src="./js/navbar.js"></script>
 </html>
