--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
             </div>
         </div>
         <section class="content">
-            <!-- <h1 class="clock">12:21</h1> -->
             <div class="content_information " data-aos="fade-down-right">
-                <h1>Ilmlilar kashf etiladigan, markaz Ilmhub! </h1>
+                <h1>Ilmlilar kashf etiladigan, markaz IlmHub! </h1>
                 <p>Yuksak qadriyatli, ilmli tek injinerlar tarbiyalash oliy maqsadimiz!</p>
                 <input type="email" id="input" placeholder="Email pochta kiriting:">
                 <button class="btn_get">Get started <i class="fas fa-arrow-right"></i></button>
