english tili qo'shildi

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </ul>
                     <div class="nav-right">
                         <div class="language">
-                            <span ><a href="./index.html" class="lan-uz">UZ</a></span>
-                            <span ><a href="index1.html" class="lan-en">ENG</a></span>
+                            <span ><a href="./index.html" class="lan-uz">O'zb</a></span>
+                            <span ><a href="index1.html" class="lan-en">Ing</a></span>
                         </div>
                         <div class="buttons">
                             <button class="btn sign-in">Kirish</button>
@@ -54,7 +54,7 @@
                 <h1>Ilmlilar kashf etiladigan, markaz Ilmhub! </h1>
                 <p>Yuksak qadriyatli, ilmli tek injinerlar tarbiyalash oliy maqsadimiz!</p>
                 <input type="email" id="input" placeholder="Email pochta kiriting:">
-                <button class="btn_get">Get started <i class="fas fa-arrow-right"></i></button>
+                <button class="btn_get">Kirish<i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="content_img" data-aos="fade-up-left">
                 <img src="./img/Frame-4.png" alt="Error">
@@ -404,7 +404,7 @@
                     </div>
                 </a>
                 <div class="footer_p" >
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, debitis.</p>
+                    <p>«Yaratuvchanlik – bu aqlning vaqtichog’lik qilishidir».</p>
                 </div>
             </div>
             <div class="footer_part_of" data-aos="fade-right">
@@ -476,10 +476,10 @@
                             <i class="fas fa-envelope" aria-hidden="true"></i>
                         </div>
                         <div class="input_sign">
-                            <input type="password" name="" id="" placeholder="password">
+                            <input type="password" name="" id="" placeholder="Parol">
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </div>
-                        <label class="remember"><input type="checkbox" id="checked">Remember me</label>
+                        <label class="remember"><input type="checkbox" id="checked">Eslab qolish</label>
                         <div class="input_sign">
                             <input type="button" value="Sign In" id="Sign">
                         </div>
@@ -504,14 +504,14 @@
                             <i class="fas fa-envelope" aria-hidden="true"></i>
                         </div>
                         <div class="input_sign">
-                            <input type="password" placeholder="Password" id="password1">
+                            <input type="password" placeholder="Parol" id="password1">
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </div>
                         <div class="input_sign">
-                            <input type="password" placeholder="Confirm password" id="password2">
+                            <input type="password" placeholder="Parolni qayta tering" id="password2">
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </div>
-                        <label class="remember"><input type="checkbox" id="check">Remember me</label>
+                        <label class="remember"><input type="checkbox" id="check">Eslab qolish</label>
                         <div class="input_sign">
                             <div class="submit-my">
                                 <input type="button" value="Sign Up" id="Sign">
