--- a/index.html
+++ b/index.html
@@ -30,11 +30,20 @@
                         </div>
                     </a>
                     <div class="nav-menu">
-                    <ul>
+                    <ul class="navbar-short">
+                        <h1 class="clock">12:00</h1>
                         <li><a href="#">Bosh Sahifa</a></li>
                         <li><a href="#our-about">Biz haqimizda</a></li>
                         <li><a href="#service">Xizmatlar</a></li>
                         <li><a href="#connect">Bog'lanish</a></li>
+                        <!-- <i class="far fa-times-circle login-x "></i>  -->
+                        <label onclick="myFunction()" for="check" class="checkbtn1">
+                            <i class='bx bxs-x-circle'></i>
+                        </label>
+                        <div class="buttons buttons-hidden">
+                            <button class="btn sign-in">Kirish</button>
+                            <button class="btn sign-up">Ro'yxatdan o'tish</button>
+                        </div>
                     </ul>
                     </div>
                     <div class="nav-right">
@@ -47,7 +56,7 @@
                             <button class="btn sign-up">Ro'yxatdan o'tish</button>
                         </div>
                         <div class="navbar_icon">
-                            <input type="checkbox" id="check">
+                            <input type="checkbox" id="check-my">
                             <label onclick="myFunction()" for="check" class="checkbtn">
                                 <i class="fas fa-bars"></i>
                             </label>
@@ -96,7 +105,7 @@
                         </div>
 
                     </div>
-                    <div class="blok-box-blog">
+                    <div class="blok-box-blog blok-box-blog-1">
                         <div class="blok-blog-2 blok-blog-3 " data-aos="flip-left">
                             <a href="https://ilmhub.notion.site/Missiya-36127dff08314affa187ea0ad464e492">
                             <div class="blok-title" style="margin-bottom:15px">
