--- a/index1.html
+++ b/index1.html
@@ -29,11 +29,20 @@
                             <h1>IlmHub</h1>
                         </div>
                     </a>
-                    <ul>
+                    <ul class="navbar-short">
+                        <h1 class=" clock clock1">12:00</h1>
                         <li><a href="#">Home</a></li>
                         <li><a href="#our-about">About us</a></li>
                         <li><a href="#service">Services</a></li>
                         <li><a href="#connect">Contact us</a></li>
+
+                        <label onclick="myFunction()" for="check" class="checkbtn1">
+                            <i class='bx bxs-x-circle'></i>
+                        </label>
+                        <div class="buttons buttons-hidden">
+                            <button class="btn sign-in">Sign in</button>
+                            <button class="btn sign-up">Sign up</button>
+                        </div>
                     </ul>
                     <div class="nav-right">
                         <div class="language">
@@ -43,6 +52,12 @@
                         <div class="buttons">
                             <button class="btn sign-in">Sign in</button>
                             <button class="btn sign-up">Sign up</button>
+                        </div>
+                        <div class="navbar_icon">
+                            <input type="checkbox" id="check-my">
+                            <label onclick="myFunction()" for="check" class="checkbtn">
+                                <i class="fas fa-bars"></i>
+                            </label>
                         </div>
                     </div>
                 </nav>
@@ -550,6 +565,6 @@
 <script>
     AOS.init();
   </script>
-
+    <script src="./js/navbar.js"></script>
 <script src="./js/app.js"></script>
 </html>
