login sign up xatosi to'grillandi

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                             <i class='bx bxs-x-circle'></i>
                         </label>
                         <div class="buttons buttons-hidden">
-                            <button class="btn sign-in">Kirish</button>
-                            <button class="btn sign-up">Ro'yxatdan o'tish</button>
+                            <button class="btn sign-inn">Kirish</button>
+                            <button class="btn sign-upp">Ro'yxatdan o'tish</button>
                         </div>
                     </ul>
                     </div>
