--- a/index1.html
+++ b/index1.html
@@ -40,8 +40,8 @@
                             <i class='bx bxs-x-circle'></i>
                         </label>
                         <div class="buttons buttons-hidden">
-                            <button class="btn sign-in">Sign in</button>
-                            <button class="btn sign-up">Sign up</button>
+                            <button class="btn sign-inn">Sign in</button>
+                            <button class="btn sign-upp">Sign up</button>
                         </div>
                     </ul>
                     <div class="nav-right">
